--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
